# hardata

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.example.yaml  deploy-agent.sh  deploy-sync.sh
.cargo/: config.toml
docs/: architecture.md
scripts/: perf_loopback.py  perf_stress.py
src/: lib.rs  main.rs
src/agent/: mod.rs
src/agent/compute/: cache.rs  core.rs  file_ops.rs  hash.rs  mod.rs  types.rs
src/agent/server/: common.rs  mod.rs
src/agent/server/quic/: config.rs  handlers.rs  mod.rs  server.rs
src/agent/server/tcp/: handlers.rs  mod.rs  server.rs
src/core/: chunk.rs  constants.rs  job.rs  mod.rs  protocol.rs  transfer_state.rs
src/diff/: mod.rs
src/sync/: mod.rs  scanner.rs
src/sync/api/: handlers.rs  mod.rs  router.rs  static_files.rs  types.rs
src/sync/engine/: cdc_cache.rs  chunk_copy.rs  job.rs  mod.rs
src/sync/engine/chunk_index/: cleanup.rs  insert.rs  mod.rs  query.rs  types.rs
src/sync/engine/scheduler/: core.rs  mod.rs  worker.rs
src/sync/engine/scheduler/adaptive/: concurrency.rs  mod.rs  network.rs
src/sync/engine/scheduler/dedup/: global.rs  local.rs  mod.rs  remote.rs
src/sync/engine/scheduler/infrastructure/: config.rs  connection.rs  idx_builder.rs  mod.rs  notify.rs
src/sync/engine/scheduler/lifecycle/: idempotency.rs  job_lifecycle.rs  job_status.rs  mod.rs
src/sync/engine/scheduler/optimization/: delayed.rs  freezer.rs  mod.rs  prefetch.rs  priority.rs
src/sync/engine/scheduler/retry/: mod.rs  policy.rs  scheduler.rs
src/sync/engine/scheduler/sync_modes/: concurrent.rs  files.rs  mod.rs  sequential.rs  single.rs
src/sync/engine/scheduler/transfer/: batch.rs  classify.rs  helpers.rs  local_copy.rs  mod.rs  scan.rs
src/sync/engine/sync_engine/: mod.rs  types.rs
src/sync/net/: bandwidth.rs  eyeballs.rs  health.rs  mod.rs  pool.rs  transport.rs
src/sync/net/quic/: client.rs  config.rs  file_ops.rs  mod.rs  operations.rs
src/sync/net/tcp/: batch.rs  client.rs  mod.rs  operations.rs
src/sync/storage/db/: idempotency.rs  jobs.rs  mod.rs  retries.rs  schema.rs  tmp_paths.rs  transfer.rs  types.rs
src/sync/transfer/batch/: concurrent.rs  mod.rs  response.rs  serial.rs  types.rs
src/util/: buffer_pool.rs  cdc.rs  error.rs  file_ops.rs  handle_pool.rs  mod.rs  retry.rs  signal.rs  time.rs  zero_copy.rs
src/util/compression/: algorithms.rs  detect.rs  mod.rs  smart.rs  types.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  index.html
web/.cargo/: config.toml
web/assets/: style.css
web/src/: api.rs  app.rs  main.rs
web/src/components/: job_actions.rs  jobs.rs  mod.rs  stats.rs
